--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
