--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@react-navigation/stack": "^6.3.20"
+    "@react-navigation/stack": "^6.3.20",
+    "react-native-snap-carousel": "^3.9.1"
   }
 }
