feat: Added Spendings page and table

--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
