--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@rnmapbox/maps": "^10.0.15",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
